# MIL-PyTorch

./: .gitignore  README.md  data_utils.py  dataset.py  image_patcher.py  metrics.py  model.py  model_utils.py  prepare_data.ipynb  pyproject.toml  test.py  train.py
config/: classes.json  train_config.yaml
example/: first_training.ipynb  mnist_example.ipynb
